Fix homepage text clipping

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -132,7 +132,7 @@ body.dark {
     position: absolute;
     left: 50%; top: 30%;
     transform: translate(-50%, -50%);
-    width: 80%; max-width: 50rem;
+    width: 80%; max-width: 40rem;
     text-align: center;
     h1 {
       font-weight: 800;
